Bug 1678116 - On recent macOS systems, avoid expensive initialization of the system font family in content processes. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D97702